--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 layout: sectioned-page
 description: Home of Perma.cc, H2O, Awesome Box, and others. We're building things in libraries.
 title: We're building things in libraries.
+title-tag: The Library Innovation Lab at Harvard University
 short-name: home
 custom-scripts: ['jquery-3.1.1.min.js', 'home.js', 'roundup.js']
 ---
