--- a/app/projects.html
+++ b/app/projects.html
@@ -1,6 +1,7 @@
 ---
 title: Projects
 short-name: projects
+description: "Our projects attempt to make something better, simpler, more transparent, or more fun."
 custom-footer: true
 layout: sectioned-page
 ---
