--- a/app/sketches.html
+++ b/app/sketches.html
@@ -1,6 +1,7 @@
 ---
 title: Sketches
 short-name: sketches
+description: "Sketches are a way to get a handle on an idea and see where it goes."
 custom-footer: true
 layout: sectioned-page
 ---
