Summer Fellows application; associated css normalization.

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -27,11 +27,11 @@ layout: sectioned-page
           <dt>numbers:</dt><dd>cohorts of five to seven summer fellows</dd>
           <dt>money:</dt><dd>$6,000 stipend</dd>
           <dt>residency:</dt><dd>is required in Cambridge, MA</dd>
-          <dt>prior art:</dt><dd>see the work of the <a href="{{ site.baseurl }}/fellows">2016 cohort</a></dd>
+          <dt>prior art:</dt><dd>see the work of the <a href="{{ site.baseurl }}/collaborate/2016/summer/fellows/">2016 cohort</a></dd>
           <!-- <dt>apply:</dt><dd>in january</dd> -->
         </dl>
 
-        <p><a href="{{ site.baseurl }}/fellows-application-2017" class="small" role="button">Learn More and Apply Now!</a></p>
+        <p><a href="{{ site.baseurl }}/collaborate/2017/summer/fellows/apply/" class="small" role="button">Learn More and Apply Now!</a></p>
       </div>
     </div> <!-- /slice-->
 
