--- a/app/about.html
+++ b/app/about.html
@@ -53,7 +53,7 @@ layout: sectioned-page
                       {{site.baseurl}}/assets/thumbs/1600x900r/lab-hero-wide.jpg 1600w">
       <source srcset="{{site.baseurl}}/assets/thumbs/400x400r/lab-hero-narrow.jpg 1x,
                       {{site.baseurl}}/assets/thumbs/800x800r/lab-hero-narrow.jpg 2x">
-      <img srcset="{{site.baseurl}}/assets/thumbs/400x400r/lab-hero-narrow.jpg"
+      <img src="{{site.baseurl}}/assets/thumbs/400x400r/lab-hero-narrow.jpg"
            alt=""
            class="img-full-width">
     </picture>
