Better express small buttons; improve cross-browser compatibility.

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -31,7 +31,7 @@ layout: sectioned-page
           <!-- <dt>apply:</dt><dd>in january</dd> -->
         </dl>
 
-        <p><a href="{{ site.baseurl }}/collaborate/2017/summer/fellows/apply/" class="small" role="button">Learn More and Apply Now!</a></p>
+        <p><a href="{{ site.baseurl }}/collaborate/2017/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
     </div> <!-- /slice-->
 
