Sizes attr required here; model on project hero sizes.

--- a/app/about.html
+++ b/app/about.html
@@ -50,7 +50,8 @@ layout: sectioned-page
       <source media="(min-width: 600px)"
               srcset="{{site.baseurl}}/assets/thumbs/800x450r/lab-hero-wide.jpg 800w,
                       {{site.baseurl}}/assets/thumbs/1200x675r/lab-hero-wide.jpg 1200w,
-                      {{site.baseurl}}/assets/thumbs/1600x900r/lab-hero-wide.jpg 1600w">
+                      {{site.baseurl}}/assets/thumbs/1600x900r/lab-hero-wide.jpg 1600w"
+              sizes="100vw">
       <source srcset="{{site.baseurl}}/assets/thumbs/400x400r/lab-hero-narrow.jpg 1x,
                       {{site.baseurl}}/assets/thumbs/800x800r/lab-hero-narrow.jpg 2x">
       <img src="{{site.baseurl}}/assets/thumbs/400x400r/lab-hero-narrow.jpg"
