Fix urls; strip whitespace.

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@ custom-scripts: ['jquery-3.1.1.min.js', 'home.js', 'roundup.js']
       </div>
     </div>
 
-    <a href="{{ site.baseurl }}/about" role="button" aria-label="Learn more about who we are"><span>Learn more about who we are</span></a>
+    <a href="{{ site.baseurl }}/about/" role="button" aria-label="Learn more about who we are"><span>Learn more about who we are</span></a>
 
   </div>
 </section>
@@ -33,7 +33,7 @@ custom-scripts: ['jquery-3.1.1.min.js', 'home.js', 'roundup.js']
 
     {% include active-project-gallery.html %}
 
-    <a href="{{ paths.root }}projects" role="button" aria-label="Browse all our active projects"><span>Browse all our projects</span></a>
+    <a href="{{ site.baseurl }}/projects/" role="button" aria-label="Browse all our active projects"><span>Browse all our projects</span></a>
 
   </div>
 </section>
@@ -52,7 +52,7 @@ custom-scripts: ['jquery-3.1.1.min.js', 'home.js', 'roundup.js']
 
     {% include active-sketch-gallery.html %}
 
-    <a href="{{ site.baseurl }}/sketches" role="button" aria-label="See everything we’re sketching"><span>See everything we’re sketching</span></a>
+    <a href="{{ site.baseurl }}/sketches/" role="button" aria-label="See everything we’re sketching"><span>See everything we’re sketching</span></a>
 
   </div>
 </section>
