--- a/app/jobs.html
+++ b/app/jobs.html
@@ -15,11 +15,11 @@ layout: sectioned-page
 
         <p>LIL is a small startup shop embedded in the world's largest academic law library. We build open-source experiments and share them with the world. Some grow into high-profile hosted websites that are depended on by courts, lawyers, professors, publishers, and the public.</p>
 
-        <p>Among other things, we're <a href="{{site.baseurl}}/projects/perma-cc">curing link rot</a> with Perma.cc, <a href="{{site.baseurl}}/projects/h2o">exploring new publishing models for textbooks</a> with H2O, and <a href="{{site.baseurl}}/projects/free-the-law">scanning 40 million pages of American caselaw</a> with Free the Law.</p>
+        <p>Among other things, we're <a href="{{site.baseurl}}/projects/perma-cc/">curing link rot</a> with Perma.cc, <a href="{{site.baseurl}}/projects/h2o/">exploring new publishing models for textbooks</a> with H2O, and <a href="{{site.baseurl}}/projects/caselaw-access-project/">scanning 40 million pages of American caselaw</a> with Free the Law.</p>
 
         <p><strong>Who we need</strong></p>
 
-        <p>We need an experienced Ruby on Rails and frontend Javascript developer to work on the <a href="{{site.baseurl}}/projects/h2o.html">H2O project</a>. H2O is an open source platform for creating free, open-licensed, remixable textbooks. It's used by Jonathan Zittrain, Lawrence Lessig and many other faculty members and students at Harvard Law School and other schools. It's poised for significant expansion and ready for an upgrade. Over the next two years, we'll launch and scale a major new version of the H2O platform, and you will lead our efforts to improve H2O's functionality, usability and reliability.</p>
+        <p>We need an experienced Ruby on Rails and frontend Javascript developer to work on the <a href="{{site.baseurl}}/projects/h2o/">H2O project</a>. H2O is an open source platform for creating free, open-licensed, remixable textbooks. It's used by Jonathan Zittrain, Lawrence Lessig and many other faculty members and students at Harvard Law School and other schools. It's poised for significant expansion and ready for an upgrade. Over the next two years, we'll launch and scale a major new version of the H2O platform, and you will lead our efforts to improve H2O's functionality, usability and reliability.</p>
 
         <p>While your primary project will be H2O, we're a collaborative, experimental lab, and we hope you'll bring us your side projects and be excited about ours. This is a great spot for people who are enthusiastic about the web and the future of libraries.</p>
 
@@ -31,7 +31,7 @@ layout: sectioned-page
 
         <p><strong>Requirements</strong></p>
 
-        <p>We won't reject any applications out of hand — enthusiasm for our mission is the top priority. But here's what we're looking for:</p>
+        <p>We won't reject any applications out of hand &amp; enthusiasm for our mission is the top priority. But here's what we're looking for:</p>
 
         <ul>
           <li>Professional front-end and back-end web development experience with Ruby on Rails and Javascript</li>
@@ -55,7 +55,7 @@ layout: sectioned-page
 
         <p><strong>Questions?</strong> Email <a href="mailto:h2o@cyber.law.harvard.edu">h2o@cyber.law.harvard.edu</a>.</p>
 
-        <p>View the <a href="{{site.baseurl}}/projects/h2o.html">H2O project website</a>.</p>
+        <p>View the <a href="{{site.baseurl}}/projects/h2o/">H2O project website</a>.</p>
 
         <p><strong><a href="https://sjobs.brassring.com/TGWEbHost/jobdetails.aspx?partnerID=25240&amp;siteID=5341&amp;AReq=40392BR">Click here to apply</a>.</strong></p>
       </div>
