Use page.title and page.slug, rather than a variety of other variables.

--- a/app/about.html
+++ b/app/about.html
@@ -1,6 +1,6 @@
 ---
-title: About
-short-name: about
+title: About the Lab
+slug: about
 custom-footer: true
 layout: sectioned-page
 ---
@@ -8,7 +8,7 @@ layout: sectioned-page
 <section>
   <div class="sleeve">
 
-    <h1>About the Lab</h1>
+    <h1>{{ page.title }}</h1>
 
     <div class="slice">
       <h3>What does the Library Innovation Lab do?</h3>
