--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -1,12 +1,12 @@
 ---
 title: Collaborate
-short-name: collaborate
+slug: collaborate
 layout: sectioned-page
 ---
 
 <section>
   <div class="sleeve">
-    <h1>Collaborate</h1>
+    <h1>{{ page.title }}</h1>
 
     <div class="slice">
       <h2>You're invited</h2>
