--- a/app/jobs.html
+++ b/app/jobs.html
@@ -1,11 +1,11 @@
 ---
 title: We're Hiring
-short-name: jobs
+slug: jobs
 layout: sectioned-page
 ---
 <section>
   <div class="sleeve">
-    <h1>We're Hiring</h1>
+    <h1>{{ page.title }}</h1>
 
     <div class="slice">
       <h2>Ruby on Rails Developer - H2O Project</h2>
