--- a/app/projects.html
+++ b/app/projects.html
@@ -1,6 +1,6 @@
 ---
 title: Projects
-short-name: projects
+slug: projects
 description: "Our projects attempt to make something better, simpler, more transparent, or more fun."
 custom-footer: true
 layout: sectioned-page
@@ -8,7 +8,7 @@ layout: sectioned-page
 
 <section>
   <div class="sleeve">
-    <h1>Projects</h1>
+    <h1>{{ page.title }}</h1>
     <div class="slice">
       <h3>What do we do?</h3>
       <div class="slice-body">
