--- a/app/sketches.html
+++ b/app/sketches.html
@@ -1,6 +1,6 @@
 ---
 title: Sketches
-short-name: sketches
+slug: sketches
 description: "Sketches are a way to get a handle on an idea and see where it goes."
 custom-footer: true
 layout: sectioned-page
@@ -8,7 +8,7 @@ layout: sectioned-page
 
 <section>
   <div class="sleeve">
-    <h1>Sketches</h1>
+    <h1>{{ page.title }}</h1>
     <div class="slice">
       <h3>What’s a sketch?</h3>
       <div class="slice-body">
