Fix some broken css.

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -48,7 +48,7 @@ layout: sectioned-page
           <dt>apply:</dt><dd>in january</dd>
         </dl>
 
-        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small" role="button">Learn More and Apply Now!</a></p>
+        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
     </div> <!-- /slice-->
 
