Draft of slice for Law and Technology Innovation Fellow

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -18,6 +18,14 @@ layout: sectioned-page
     </div>
 
     <div class="slice">
+      <h2>Law and Technology Innovation Fellow</h2>
+      <div class="slice-body">
+        <p>Harvard Law School invites applications to serve as the inaugural Law and Technology Innovation Fellow during the 2017-18 academic year. Drawing on and contributing to the Law School's dynamic programs at the intersection of law and technology, the Fellow will pursue his or her own technology project that holds promise for improving the law.</p>
+        <p><a href="{{ site.baseurl }}/collaborate/2017/law-and-tech-fellow/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+      </div>
+    </div> <!-- /slice-->
+
+    <div class="slice">
       <h2>Summer Fellows</h2>
       <div class="slice-body">
         <p>With the support of the fellows in their cohort, summer fellows produce a significant project, book chapter, work of art, technical feature, or other meaningful bundle of labor.</p>
