--- a/app/about.html
+++ b/app/about.html
@@ -89,6 +89,19 @@ layout: sectioned-page
 <section class="people-unaffiliated">
   <div class="sleeve">
     <div class="heading-pair">
+      <h2>Summer PPL</h2>
+      <p>Summer PPL</p>
+    </div>
+    
+    <div class="list">
+      {% include about-people-summer.html %}
+    </div>
+  </div>
+</section>
+
+<section class="people-unaffiliated">
+  <div class="sleeve">
+    <div class="heading-pair">
       <h2>Collaborators</h2>
       <p>Friends and fellow travelers.</p>
     </div>
