adds ppls social info

--- a/app/about.html
+++ b/app/about.html
@@ -89,8 +89,8 @@ layout: sectioned-page
 <section class="people-unaffiliated">
   <div class="sleeve">
     <div class="heading-pair">
-      <h2>Summer PPL</h2>
-      <p>Summer PPL</p>
+      <h2>Summer Guests</h2>
+      <p>Fellows, Interns, Tinkerers.</p>
     </div>
     
     <div class="list">
