added: CAP fellow posting

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -18,10 +18,10 @@ layout: sectioned-page
     </div>
 
     <div class="slice">
-      <h2>Law and Technology Innovation Fellow</h2>
+      <h2>Caselaw Access Project Fellow</h2>
       <div class="slice-body">
-        <p>Harvard Law School invites applications to serve as the inaugural Law and Technology Innovation Fellow during the 2017-18 academic year. Drawing on and contributing to the Law School's dynamic programs at the intersection of law and technology, the Fellow will pursue his or her own technology project that holds promise for improving the law.</p>
-        <p><a href="{{ site.baseurl }}/collaborate/2017/law-and-tech-fellow/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+        <p>Harvard Law School invites applications to serve as the Caselaw Access Project Fellow during the 2017-18 year. Drawing on and contributing to the Law School's <a href="{{site.baseurl}}/projects/caselaw-access-project/">Caselaw Access Project</a>, the Fellow will explore technology that enhances access to and understanding of the law and improves access to justice.</p>
+        <p><a href="{{ site.baseurl }}/collaborate/2017/cap-fellow/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
     </div> <!-- /slice-->
 
