add - more projects

--- a/app/workshop.html
+++ b/app/workshop.html
@@ -67,5 +67,24 @@ custom-css: ['workshop']
         <p>Exploring ways libraries can support preservation and long-term access to open civic data through community information portals such as OpenDataPhilly</p>
       </div>
     </div>
+    <div class="slice">
+      <h3>Indigenous Digital Archive</h3>
+      <div class="slice-body">
+        <p>Helping people more easily access and engage with mass digitized archival documents and photos through tools that enable people to annotate, tag and make searchable archival materials</p>
+      </div>
+    </div>
+    <div class="slice">
+      <h3>Literacy, Art, Technology and Community</h3>
+      <div class="slice-body">
+        <p>Increasing literacy and engaging communities by piloting StoryScape, an interactive learning platform that allows users to create visual stories about their communities with artwork from local artists in public libraries</p>
+      </div>
+    </div>
+    <div class="slice">
+      <h3>The People’s Media Collection</h3>
+      <div class="slice-body">
+        <p>Offering media training in libraries through a program that engages community members to gather information about their communities and create broadcast content</p>
+      </div>
+    </div>
+
   </div>
 </section>
