add - 2018 fellow application page

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -35,8 +35,11 @@ layout: sectioned-page
           <dt>numbers:</dt><dd>cohorts of five to seven summer fellows</dd>
           <dt>money:</dt><dd>$6,000 stipend</dd>
           <dt>residency:</dt><dd>is required in Cambridge, MA</dd>
-          <dt>prior art:</dt><dd>see the work of the <a href="{{ site.baseurl }}/collaborate/2016/summer/fellows/">2016 cohort</a></dd>
-          <!-- <dt>apply:</dt><dd>in january</dd> -->
+          <dt>prior art:</dt><dd>see the work of the <a href="{{ site.baseurl }}/collaborate/2016/summer/fellows/">2016 cohort</a>,
+          as well as our 2017 cohort, <a href="https://library.harvard.edu/09192017-0950/creating-new-tools-libraries">here</a>
+          and
+          <a href="https://library.harvard.edu/10022017-1134/discoveries-harvard-library-innovation-lab">here</a>.
+          <dt>apply:</dt><dd>in January</dd>.
         </dl>
 
         <p><a href="{{ site.baseurl }}/collaborate/2017/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
