Modified: 'about' template to display summer fellows/interns section only if we have some fellows/interns in the data file Updated: affiliation on past summer fellows/interns

--- a/app/about.html
+++ b/app/about.html
@@ -5,6 +5,8 @@ custom-footer: true
 layout: sectioned-page
 ---
 
+{% assign summer_friends_length = site.data.people | where: "affiliated", "summer" | size %}
+
 <section>
   <div class="sleeve">
 
@@ -86,18 +88,20 @@ layout: sectioned-page
   </div>
 </section>
 
+{% if summer_friends_length > 0 %}
 <section class="people-unaffiliated">
   <div class="sleeve">
     <div class="heading-pair">
       <h2>Summer Guests</h2>
       <p>Fellows, Interns, Tinkerers.</p>
     </div>
-    
+
     <div class="list">
       {% include about-people-summer.html %}
     </div>
   </div>
 </section>
+{% endif %}
 
 <section class="people-unaffiliated">
   <div class="sleeve">
