Correct HTML errors

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -39,7 +39,7 @@ layout: sectioned-page
           as well as our 2017 cohort, <a href="https://library.harvard.edu/09192017-0950/creating-new-tools-libraries">here</a>
           and
           <a href="https://library.harvard.edu/10022017-1134/discoveries-harvard-library-innovation-lab">here</a>.
-          <dt>apply:</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLScqBEHkPNn83m7Wkb7k-4AtcCKuB75BKVMjLHJrvM6U3ay4Zw/viewform">here</a></dd>.
+          <dt>apply:</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLScqBEHkPNn83m7Wkb7k-4AtcCKuB75BKVMjLHJrvM6U3ay4Zw/viewform">here</a>.</dd>
         </dl>
 
         <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
