--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -13,22 +13,24 @@ layout: sectioned-page
       <div class="slice-body">
         <p>LIL is a hallway connecting three rooms of party guests - law folks, tech folks, and library folks. It's a fantastic group of people and we want you to join us!</p>
 
-        <p>We invite you to collaborate with us anytime by dropping us an <a href="mailto:{{ site.email }}">email</a> or by sharing <a href="{{ site.github_url }}">some code</a>. We also hope you'll consider joining us in one of the roles below.</p>
+        <p>We invite you to collaborate with us anytime by dropping us an <a href="mailto:{{ site.email }}">email</a> or by sharing <a href="{{ site.github_url }}">some code</a>.</p>
       </div>
     </div>
 
-    <div class="slice">
+    <!--<div class="slice">
       <h2>Caselaw Access Project Fellow</h2>
       <div class="slice-body">
         <p>Harvard Law School invites applications to serve as the Caselaw Access Project Fellow during the 2017-18 year. Drawing on and contributing to the Law School's <a href="{{site.baseurl}}/projects/caselaw-access-project/">Caselaw Access Project</a>, the Fellow will explore technology that enhances access to and understanding of the law and improves access to justice.</p>
         <p><a href="{{ site.baseurl }}/collaborate/2017/cap-fellow/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
-    </div> <!-- /slice-->
+    </div>--> <!-- /slice-->
 
     <div class="slice">
       <h2>Summer Fellows</h2>
       <div class="slice-body">
-        <p>With the support of the fellows in their cohort, summer fellows produce a significant project, book chapter, work of art, technical feature, or other meaningful bundle of labor.</p>
+        <p>We're not currently accepting applications. This program is on hiatus while we work on ways to improve it for the future.</p>
+        <p>Follow us on <a href="https://twitter.com/harvardlil">Twitter</a> for the most up-to-date information.</p>
+        <!--<p class="text-gray">With the support of the fellows in their cohort, summer fellows produce a significant project, book chapter, work of art, technical feature, or other meaningful bundle of labor.</p>
 
         <dl>
           <dt>term:</dt><dd>runs the course of the summer</dd>
@@ -42,14 +44,16 @@ layout: sectioned-page
           <dt>apply:</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLScqBEHkPNn83m7Wkb7k-4AtcCKuB75BKVMjLHJrvM6U3ay4Zw/viewform">here</a>.</dd>
         </dl>
 
-        <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+        <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>-->
       </div>
     </div> <!-- /slice-->
 
     <div class="slice">
       <h2>Summer Interns</h2>
       <div class="slice-body">
-        <p>We're close friends with <a href="https://cyber.harvard.edu">Berkman Klein Center</a> and we host three Berkterns over the summer for focused work on an existing area of research.</p>
+        <p>We're not currently accepting applications. This program is on hiatus while we work on ways to improve it for the future.</p>
+        <p>Follow us on <a href="https://twitter.com/harvardlil">Twitter</a> for the most up-to-date information.</p>
+        <!--<p>We're close friends with <a href="https://cyber.harvard.edu">Berkman Klein Center</a> and we host three Berkterns over the summer for focused work on an existing area of research.</p>
 
         <dl class="left-list">
           <dt>term:</dt><dd>runs the course of the summer</dd>
@@ -59,7 +63,7 @@ layout: sectioned-page
           <dt>apply:</dt><dd>in january</dd>
         </dl>
 
-        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small-btn" role="button">Learn More and Apply Now!</a></p>-->
       </div>
     </div> <!-- /slice-->
 
