--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -17,20 +17,29 @@ layout: sectioned-page
       </div>
     </div>
 
-    <!--<div class="slice">
+    <div class="slice">
+      <h2>LIL Job Openings</h2>
+      <div class="slice-body">
+        <p>We're hiring a developer for our H2O project, which helps faculty make open textbooks and other educational resources.</p>
+        <p><a href="{{ site.baseurl }}/collaborate/2019/h2o-developer/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+      </div>
+    </div>
+
+<!--
+    <div class="slice">
       <h2>Caselaw Access Project Fellow</h2>
       <div class="slice-body">
         <p>Harvard Law School invites applications to serve as the Caselaw Access Project Fellow during the 2017-18 year. Drawing on and contributing to the Law School's <a href="{{site.baseurl}}/projects/caselaw-access-project/">Caselaw Access Project</a>, the Fellow will explore technology that enhances access to and understanding of the law and improves access to justice.</p>
         <p><a href="{{ site.baseurl }}/collaborate/2017/cap-fellow/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
-    </div>--> <!-- /slice-->
+    </div>
 
     <div class="slice">
       <h2>Summer Fellows</h2>
       <div class="slice-body">
         <p>We're not currently accepting applications. This program is on hiatus while we work on ways to improve it for the future.</p>
         <p>Follow us on <a href="https://twitter.com/harvardlil">Twitter</a> for the most up-to-date information.</p>
-        <!--<p class="text-gray">With the support of the fellows in their cohort, summer fellows produce a significant project, book chapter, work of art, technical feature, or other meaningful bundle of labor.</p>
+        <p class="text-gray">With the support of the fellows in their cohort, summer fellows produce a significant project, book chapter, work of art, technical feature, or other meaningful bundle of labor.</p>
 
         <dl>
           <dt>term:</dt><dd>runs the course of the summer</dd>
@@ -44,16 +53,16 @@ layout: sectioned-page
           <dt>apply:</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLScqBEHkPNn83m7Wkb7k-4AtcCKuB75BKVMjLHJrvM6U3ay4Zw/viewform">here</a>.</dd>
         </dl>
 
-        <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>-->
+        <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
-    </div> <!-- /slice-->
+    </div>
 
     <div class="slice">
       <h2>Summer Interns</h2>
       <div class="slice-body">
         <p>We're not currently accepting applications. This program is on hiatus while we work on ways to improve it for the future.</p>
         <p>Follow us on <a href="https://twitter.com/harvardlil">Twitter</a> for the most up-to-date information.</p>
-        <!--<p>We're close friends with <a href="https://cyber.harvard.edu">Berkman Klein Center</a> and we host three Berkterns over the summer for focused work on an existing area of research.</p>
+        <p>We're close friends with <a href="https://cyber.harvard.edu">Berkman Klein Center</a> and we host three Berkterns over the summer for focused work on an existing area of research.</p>
 
         <dl class="left-list">
           <dt>term:</dt><dd>runs the course of the summer</dd>
@@ -63,9 +72,10 @@ layout: sectioned-page
           <dt>apply:</dt><dd>in january</dd>
         </dl>
 
-        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small-btn" role="button">Learn More and Apply Now!</a></p>-->
+        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
-    </div> <!-- /slice-->
+    </div>
+-->
 
     <div class="slice">
       <h2>Research Fellows</h2>
