--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 layout: sectioned-page
 title: We're building things in libraries.
 title-tag: The Library Innovation Lab at Harvard University
-description: "Home of Perma.cc, H2O, Awesome Box, and others. We're building things in libraries."
+description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. We're building things in libraries."
 slug: home
 sharing-image: images/header-splash-logo-ani@1x.gif
 custom-scripts: ['jquery-3.1.1.min.js', 'home.js']
