--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -11,13 +11,29 @@ layout: sectioned-page
     <div class="slice">
       <h2>You're invited</h2>
       <div class="slice-body">
-        <p>LIL is a hallway connecting three rooms of party guests - law folks, tech folks, and library folks. It's a fantastic group of people and we want you to join us!</p>
+        <p>LIL is a hallway connecting three rooms of party guests - law folks, tech folks, and library folks. It's a
+          fantastic group of people and we want you to join us!</p>
 
-        <p>We invite you to collaborate with us anytime by dropping us an <a href="mailto:{{ site.email }}">email</a> or by sharing <a href="{{ site.github_url }}">some code</a>.</p>
+        <p>We invite you to collaborate with us anytime by dropping us an <a href="mailto:{{ site.email }}">email</a> or
+          by sharing <a href="{{ site.github_url }}">some code</a>.</p>
+      </div>
+
+    </div>
+
+    <div class="slice">
+      <h2>LIL Job Openings</h2>
+      <div class="slice-body">
+        <p>We're hiring an outreach and support coordinator to help us meet the exploding need for
+          library-powered open educational resources and web archiving tools.</p>
+        <p>
+            <a href="{{ site.baseurl }}/collaborate/2020/outreach-support/" class="small-btn" role="button">Learn More
+            and Apply
+            Now!</a>
+        </p>
       </div>
     </div>
 
-<!--
+    <!--
     <div class="slice">
       <h2>Caselaw Access Project Fellow</h2>
       <div class="slice-body">
@@ -72,14 +88,21 @@ layout: sectioned-page
     <div class="slice">
       <h2>Research Fellows</h2>
       <div class="slice-body">
-        <p>Our research fellowship offers an opportunity to think, work, and connect on a longer timescale. Holders of this fellowship are often well-versed in their domains and have significant direction and independence in their work.</p>
+        <p>Our research fellowship offers an opportunity to think, work, and connect on a longer timescale. Holders of
+          this fellowship are often well-versed in their domains and have significant direction and independence in
+          their work.</p>
 
         <dl>
-          <dt>term:</dt><dd>variable</dd>
-          <dt>numbers:</dt><dd>up to three research fellows</dd>
-          <dt>money:</dt><dd>unpaid</dd>
-          <dt>residency:</dt><dd>is not required</dd>
-          <dt>apply:</dt><dd>by <a href="mailto:{{ site.email }}"> chatting</a> with us</dd>
+          <dt>term:</dt>
+          <dd>variable</dd>
+          <dt>numbers:</dt>
+          <dd>up to three research fellows</dd>
+          <dt>money:</dt>
+          <dd>unpaid</dd>
+          <dt>residency:</dt>
+          <dd>is not required</dd>
+          <dt>apply:</dt>
+          <dd>by <a href="mailto:{{ site.email }}"> chatting</a> with us</dd>
         </dl>
       </div>
     </div> <!-- /slice-->
