summer ra listing

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -51,27 +51,43 @@ layout: sectioned-page
         <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
       </div>
     </div>
-
+-->
     <div class="slice">
-      <h2>Summer Interns</h2>
+      <h2>Summer Research Assistants</h2>
       <div class="slice-body">
-        <p>We're not currently accepting applications. This program is on hiatus while we work on ways to improve it for the future.</p>
-        <p>Follow us on <a href="https://twitter.com/harvardlil">Twitter</a> for the most up-to-date information.</p>
-        <p>We're close friends with <a href="https://cyber.harvard.edu">Berkman Klein Center</a> and we host three Berkterns over the summer for focused work on an existing area of research.</p>
+        <p>We're currently accepting applications for remote summer research assistants.</p>
+        <p>We work at the intersection of libraries, technology, and the law, building and supporting
+        projects that broaden access to information through open source software. This summer, we're seeking research assistants to participate broadly in the life and work of LIL and to focus, in particular, on exploring new territory in connection with our <a href="https://opencasebook.org">H2O Open Casebook</a> project, an open education platform built to create better teaching materials while reducing the cost of education for students.</p>
+        <p>As a research assistant, you'll help us imagine and act on new ways to serve the growing community of faculty, librarians and students who are interested in open educational resources in the legal field. You'll also get involved in the work of our team of librarians, lawyers and programmers on other projects such as the <a href="https://case.law">Caselaw Access Project</a> and <a href="https://perma.cc">Perma.cc</a>.</p>
+        <p>The ideal research assistant will be curious, self-motivated and eager to interact directly with our team and the communities we serve. We welcome applications from current and future law students, as well as those with technical expertise, but neither legal nor technical expertise is required.</p>
 
         <dl class="left-list">
           <dt>term:</dt><dd>runs the course of the summer</dd>
-          <dt>numbers:</dt><dd>cohorts of three interns</dd>
-          <dt>money:</dt><dd>$11.50 per hour at 35 hours per week</dd>
-          <dt>residency:</dt><dd>is required in Cambridge, MA</dd>
-          <dt>apply:</dt><dd>in january</dd>
+          <dt>numbers:</dt><dd>two RAs</dd>
+          <dt>money:</dt><dd>$16 per hour at 35 hours per week</dd>
+          <dt>residency:</dt><dd>is remote</dd>
+          <dt>apply:</dt><dd>through May 14, 2021</dd>
         </dl>
 
-        <p><a href="https://cyber.harvard.edu/getinvolved/internships_summer" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+       <p>Applications will only be accepted through the application form accessible below. Required materials for all applicants include: (1) a current resume or CV and (2) a cover letter (1200 characters maximum) describing your skills and interests.</p>
+        <p><a href="https://forms.gle/MBqFdXE2qDWE8dLRA" class="small-btn" role="button" target="_blank">Apply Now!</a></p>
       </div>
     </div>
--->
 
+    <div class="slice">
+        <h2>Diversity</h2>
+        <div class="slice-body">
+            <p>The work and well-being of the Lab are strengthened profoundly by the diversity of our network and our
+                differences in background, culture, experience, national origin, religion, sexual orientation, and much
+                more.
+                We actively seek and welcome applications from people of color, women, the LGBTQ+ community, and persons
+                with
+                disabilities, as well as applications from researchers and practitioners from across the spectrum of
+                disciplines
+                and methods.</p>
+        </div>
+    </div>
+<!--
     <div class="slice">
       <h2>Research Fellows</h2>
       <div class="slice-body">
@@ -92,6 +108,7 @@ layout: sectioned-page
           <dd>by <a href="mailto:{{ site.email }}"> chatting</a> with us</dd>
         </dl>
       </div>
-    </div> <!-- /slice-->
+    </div> 
+-->
   </div>
 </section>
