revise deadline (again)

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -64,9 +64,9 @@ layout: sectioned-page
         <dl class="left-list">
           <dt>term:</dt><dd>runs the course of the summer</dd>
           <dt>numbers:</dt><dd>two RAs</dd>
-          <dt>money:</dt><dd>$16 per hour at 35 hours per week</dd>
+          <dt>money:</dt><dd>$16 per hour at up to 35 hours per week</dd>
           <dt>residency:</dt><dd>is remote</dd>
-          <dt>apply:</dt><dd>through May 21, 2021</dd>
+          <dt>apply:</dt><dd>through June 4, 2021</dd>
         </dl>
 
        <p>Applications will only be accepted through the application form accessible below. Required materials for all applicants include: (1) a current resume or CV and (2) a cover letter (1200 characters maximum) describing your skills and interests.</p>
