update collaboration with program coordinator posting

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -11,104 +11,87 @@ layout: sectioned-page
     <div class="slice">
       <h2>You're invited</h2>
       <div class="slice-body">
-        <p>LIL is a hallway connecting three rooms of party guests - law folks, tech folks, and library folks. It's a
-          fantastic group of people and we want you to join us!</p>
+        <p>
+          LIL is a hallway connecting three rooms of party guests - law folks,
+          tech folks, and library folks. It's a fantastic group of people and we
+          want you to join us!
+        </p>
 
-        <p>We invite you to collaborate with us anytime by dropping us an <a href="mailto:{{ site.email }}">email</a> or
-          by sharing <a href="{{ site.github_url }}">some code</a>.</p>
+        <p>
+          We invite you to collaborate with us anytime by dropping us an
+          <a href="mailto:{{ site.email }}">email</a> or by sharing
+          <a href="{{ site.github_url }}">some code</a>.
+        </p>
       </div>
-
     </div>
 
-    <!--
     <div class="slice">
-      <h2>Caselaw Access Project Fellow</h2>
+      <h2>Program Coordinator</h2>
       <div class="slice-body">
-        <p>Harvard Law School invites applications to serve as the Caselaw Access Project Fellow during the 2017-18 year. Drawing on and contributing to the Law School's <a href="{{site.baseurl}}/projects/caselaw-access-project/">Caselaw Access Project</a>, the Fellow will explore technology that enhances access to and understanding of the law and improves access to justice.</p>
-        <p><a href="{{ site.baseurl }}/collaborate/2017/cap-fellow/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+        <p>
+          We're currently accepting applications for a Program Coordinator who
+          will help keep us organized, efficient and responsive to the needs of
+          our communities.
+        </p>
+        <p>
+          Our three major projects -
+          <a href="https://case.law">the Caselaw Access Project</a>,
+          <a href="https://perma.cc">Perma.cc</a> and
+          <a href="https://opencasebook.org">H2O</a> all have grown
+          significantly in adoption and complexity in recent years. We're
+          looking to add a new LIL team member who can coordinate all of the
+          essential and recurring activities that make those projects
+          successful, as well as the administrative operations that keep LIL
+          running smoothly.
+        </p>
+        <p>
+          As a Program Coordinator, you'll help us expand the impact of our work
+          to meet the needs of growing communities of scholars, students,
+          teachers, lawyers, librarians, judges, journalists and beyond. You'll
+          also lead our continuous efforts to streamline and improve
+          administrative process and to build productive relationships with our
+          colleagues across Harvard.
+        </p>
+        <p>
+          The ideal Program Coordinator will be curious, organized,
+          self-motivated and eager to help us refine the operational activities
+          of the Lab. We welcome candidates with backgrounds in law, technology
+          or librarianship, but expertise in those areas is not required.
+        </p>
+
+        <p>
+          To learn more about the position and how to apply, please click below
+          or visit the
+          <a
+            href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1902415_5341"
+            >official job posting on the Harvard Careers website</a
+          >.
+        </p>
+        <p>
+          <a
+            href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1902415_5341"
+            class="small-btn"
+            role="button"
+            target="_blank"
+            >Learn More and Apply!</a
+          >
+        </p>
       </div>
     </div>
 
     <div class="slice">
-      <h2>Summer Fellows</h2>
+      <h2>Diversity</h2>
       <div class="slice-body">
-        <p>We're not currently accepting applications. This program is on hiatus while we work on ways to improve it for the future.</p>
-        <p>Follow us on <a href="https://twitter.com/harvardlil">Twitter</a> for the most up-to-date information.</p>
-        <p class="text-gray">With the support of the fellows in their cohort, summer fellows produce a significant project, book chapter, work of art, technical feature, or other meaningful bundle of labor.</p>
-
-        <dl>
-          <dt>term:</dt><dd>runs the course of the summer</dd>
-          <dt>numbers:</dt><dd>cohorts of five to seven summer fellows</dd>
-          <dt>money:</dt><dd>$6,000 stipend</dd>
-          <dt>residency:</dt><dd>is required in Cambridge, MA</dd>
-          <dt>prior art:</dt><dd>see the work of the <a href="{{ site.baseurl }}/collaborate/2016/summer/fellows/">2016 cohort</a>,
-          as well as our 2017 cohort, <a href="https://library.harvard.edu/09192017-0950/creating-new-tools-libraries">here</a>
-          and
-          <a href="https://library.harvard.edu/10022017-1134/discoveries-harvard-library-innovation-lab">here</a>.
-          <dt>apply:</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLScqBEHkPNn83m7Wkb7k-4AtcCKuB75BKVMjLHJrvM6U3ay4Zw/viewform">here</a>.</dd>
-        </dl>
-
-        <p><a href="{{ site.baseurl }}/collaborate/2018/summer/fellows/apply/" class="small-btn" role="button">Learn More and Apply Now!</a></p>
+        <p>
+          The work and well-being of the Lab are strengthened profoundly by the
+          diversity of our network and our differences in background, culture,
+          experience, national origin, religion, sexual orientation, and much
+          more. We actively seek and welcome applications from people of color,
+          women, the LGBTQ+ community, and persons with disabilities, as well as
+          applications from researchers and practitioners from across the
+          spectrum of disciplines and methods.
+        </p>
       </div>
     </div>
--->
-    <div class="slice">
-      <h2>Summer Research Assistants</h2>
-      <div class="slice-body">
-        <p>We're currently accepting applications for remote summer research assistants.</p>
-        <p>We work at the intersection of libraries, technology, and the law, building and supporting
-        projects that broaden access to information through open source software. This summer, we're seeking research assistants to participate broadly in the life and work of LIL and to focus, in particular, on exploring new territory in connection with our <a href="https://opencasebook.org">H2O Open Casebook</a> project, an open education platform built to create better teaching materials while reducing the cost of education for students.</p>
-        <p>As a research assistant, you'll help us imagine and act on new ways to serve the growing community of faculty, librarians and students who are interested in open educational resources in the legal field. You'll also get involved in the work of our team of librarians, lawyers and programmers on other projects such as the <a href="https://case.law">Caselaw Access Project</a> and <a href="https://perma.cc">Perma.cc</a>.</p>
-        <p>The ideal research assistant will be curious, self-motivated and eager to interact directly with our team and the communities we serve. We welcome applications from current and future law students, as well as those with technical expertise, but neither legal nor technical expertise is required.</p>
-
-        <dl class="left-list">
-          <dt>term:</dt><dd>runs the course of the summer</dd>
-          <dt>numbers:</dt><dd>two RAs</dd>
-          <dt>money:</dt><dd>$16 per hour at up to 35 hours per week</dd>
-          <dt>residency:</dt><dd>is remote</dd>
-          <dt>apply:</dt><dd>through June 4, 2021</dd>
-        </dl>
-
-       <p>Applications will only be accepted through the application form accessible below. Required materials for all applicants include: (1) a current resume or CV and (2) a cover letter (1200 characters maximum) describing your skills and interests.</p>
-        <p><a href="https://forms.gle/MBqFdXE2qDWE8dLRA" class="small-btn" role="button" target="_blank">Apply Now!</a></p>
-      </div>
-    </div>
-
-    <div class="slice">
-        <h2>Diversity</h2>
-        <div class="slice-body">
-            <p>The work and well-being of the Lab are strengthened profoundly by the diversity of our network and our
-                differences in background, culture, experience, national origin, religion, sexual orientation, and much
-                more.
-                We actively seek and welcome applications from people of color, women, the LGBTQ+ community, and persons
-                with
-                disabilities, as well as applications from researchers and practitioners from across the spectrum of
-                disciplines
-                and methods.</p>
-        </div>
-    </div>
-<!--
-    <div class="slice">
-      <h2>Research Fellows</h2>
-      <div class="slice-body">
-        <p>Our research fellowship offers an opportunity to think, work, and connect on a longer timescale. Holders of
-          this fellowship are often well-versed in their domains and have significant direction and independence in
-          their work.</p>
-
-        <dl>
-          <dt>term:</dt>
-          <dd>variable</dd>
-          <dt>numbers:</dt>
-          <dd>up to three research fellows</dd>
-          <dt>money:</dt>
-          <dd>unpaid</dd>
-          <dt>residency:</dt>
-          <dd>is not required</dd>
-          <dt>apply:</dt>
-          <dd>by <a href="mailto:{{ site.email }}"> chatting</a> with us</dd>
-        </dl>
-      </div>
-    </div> 
--->
   </div>
 </section>
