Post web developer position

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -9,73 +9,106 @@ layout: sectioned-page
     <h1>{{ page.title }}</h1>
 
     <div class="slice">
-      <h2>You're invited</h2>
+      <h2>About us</h2>
       <div class="slice-body">
         <p>
-          LIL is a hallway connecting three rooms of party guests - law folks,
-          tech folks, and library folks. It's a fantastic group of people and we
-          want you to join us!
+	  The Library Innovation Lab is a team of librarians,
+	  programmers, artists, and lawyers with a broad mission: to
+	  build open source tools and services, open to everyone and
+	  in the public interest, solving serious emerging problems
+	  from the unique perspective of the world's largest academic
+	  law library. We are seeking web developers to join our team.
         </p>
 
         <p>
-          We invite you to collaborate with us anytime by dropping us an
-          <a href="mailto:{{ site.email }}">email</a> or by sharing
-          <a href="{{ site.github_url }}">some code</a>.
+	  Our tech team at full strength includes five developers and
+	  a devops engineer, working most often with Django, Vue, and
+	  Postgres.
         </p>
       </div>
     </div>
 
     <div class="slice">
-      <h2>Program Coordinator</h2>
+      <h2>About you</h2>
       <div class="slice-body">
         <p>
-          We're currently accepting applications for a Program Coordinator who
-          will help keep us organized, efficient and responsive to the needs of
-          our communities.
+	  While we encourage anyone to apply, this is a particularly
+	  good fit for experienced developers who want to spend some
+	  time working in the public interest in an academic setting,
+	  with room to pursue their own priorities relating to our
+	  mission.
         </p>
-        <p>
-          Our three major projects -
-          <a href="https://case.law">the Caselaw Access Project</a>,
-          <a href="https://perma.cc">Perma.cc</a> and
-          <a href="https://opencasebook.org">H2O</a> all have grown
-          significantly in adoption and complexity in recent years. We're
-          looking to add a new LIL team member who can coordinate all of the
-          essential and recurring activities that make those projects
-          successful, as well as the administrative operations that keep LIL
-          running smoothly.
-        </p>
-        <p>
-          As a Program Coordinator, you'll help us expand the impact of our work
-          to meet the needs of growing communities of scholars, students,
-          teachers, lawyers, librarians, judges, journalists and beyond. You'll
-          also lead our continuous efforts to streamline and improve
-          administrative process and to build productive relationships with our
-          colleagues across Harvard.
-        </p>
-        <p>
-          The ideal Program Coordinator will be curious, organized,
-          self-motivated and eager to help us refine the operational activities
-          of the Lab. We welcome candidates with backgrounds in law, technology
-          or librarianship, but expertise in those areas is not required.
-        </p>
+      </div>
+    </div>
 
-        <p>
-          To learn more about the position and how to apply, please click below
-          or visit the
-          <a
-            href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1902415_5341"
-            >official job posting on the Harvard Careers website</a
-          >.
-        </p>
-        <p>
-          <a
-            href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=1902415_5341"
-            class="small-btn"
-            role="button"
-            target="_blank"
-            >Learn More and Apply!</a
-          >
-        </p>
+    <div class="slice">
+      <h2>What we offer</h2>
+      <div class="slice-body">
+	<p>
+	  Work on stuff that matters. Our core projects are about
+	  opening access to law; redefining legal casebooks and
+	  reducing their cost; and exploring cutting-edge web archival
+	  techniques to keep important links working for the next 100
+	  years.
+	</p>
+	<p>
+	  Build open source. All of our projects are open source and
+	  otherwise designed to maximize the public benefit of our
+	  work.
+	</p>
+	<p>
+	  Set your own pace. We are a small, self-directed group. Pick
+	  the priorities where you see the highest impact at a pace
+	  that feels comfortable. We have real vacations and no crunch
+	  time.
+	</p>
+	<p>
+	  Set your own research agenda. We are located at
+	  the <a href="https://hls.harvard.edu/library/">Harvard Law
+	  School Library</a> and share a kitchen with
+	  the <a href="https://cyber.harvard.edu/">Berkman Klein
+	  Center</a>
+	  and <a href="https://metalabharvard.github.io/">metaLAB</a>. Going
+	  to events, having conversations, developing your scholarly
+	  perspective, and exploring it through code are
+	  encouraged. We will specifically prioritize these things at
+	  the cost of shipping the next feature.
+	</p>
+	<p>
+	  And we have pretty good health insurance.
+	</p>
+      </div>
+    </div>
+
+    <div class="slice">
+      <h2>Location</h2>
+      <div class="slice-body">
+	<p>
+	  We are based in a newly renovated space on the Harvard Law
+	  School campus. While you can set your own schedule for home
+	  and on-site days, the ideal candidate will benefit from
+	  regular on-site collaboration with our team and the Harvard
+	  community.
+	</p>
+      </div>
+    </div>
+
+    <div class="slice">
+      <h2>Apply</h2>
+      <div class="slice-body">
+	<p>
+	  <a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?PageType=JobDetails&partnerid=25240&siteid=5341&Areq=56168BR#jobDetails=1929281_5341">Web
+	  Application Developer posting</a>
+	</p>
+      </div>
+    </div>
+
+    <div class="slice">
+      <h2>Questions</h2>
+      <div class="slice-body">
+	<p>
+	  Contact us at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.
+	</p>
       </div>
     </div>
 
