--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -9,6 +9,14 @@ layout: sectioned-page
     <h1>{{ page.title }}</h1>
 
     <div class="slice">
+      <div class="slice-body">
+        <p>
+          We're looking for web developers!
+        </p>
+      </div>
+    </div>
+
+    <div class="slice">
       <h2>About us</h2>
       <div class="slice-body">
         <p>
