--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -83,7 +83,10 @@ layout: sectioned-page
 	  the cost of shipping the next feature.
 	</p>
 	<p>
-	  And we have pretty good health insurance.
+	  Have job stability and support. While we maintain the creative 
+	  atmosphere and flexibility of a small innovation lab, we’re 
+	  backed by an established institution with strong benefits and 
+	  support for employees.
 	</p>
       </div>
     </div>
