--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -84,7 +84,7 @@ layout: sectioned-page
 	</p>
 	<p>
 	  Have job stability and support. While we maintain the creative 
-	  atmosphere and flexibility of a small innovation lab, we’re 
+	  atmosphere and flexibility of a small innovation lab, we're 
 	  backed by an established institution with strong benefits and 
 	  support for employees.
 	</p>
