Spruce up our sharing image and metadata; add chefandy's png for collaboration page.

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -2,6 +2,10 @@
 title: Collaborate
 slug: collaborate
 layout: sectioned-page
+
+sharing-image: images/og_hiring_developers.png
+sharing-card-type: summary_large_image
+sharing-description: "Now hiring developers!"
 ---
 
 <section>
