--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@ title-tag: The Library Innovation Lab at Harvard University
 description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. We're building things in libraries."
 slug: home
 sharing-image: images/header-splash-logo-ani@1x.gif
+sharing-card-type: summary_large_image
 custom-scripts: ['jquery-3.1.1.min.js', 'home.js']
 ---
 
