Twitter won't render cards if you omit twitter:title (preview services are wrong)

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 ---
 layout: sectioned-page
 title: We're building things in libraries.
-title-tag: The Library Innovation Lab at Harvard University
+title-tag-complete: The Library Innovation Lab at Harvard University
 description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. We're building things in libraries."
 slug: home
 sharing-image: images/header-splash-logo-ani@1x.gif
