--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -9,137 +9,166 @@ sharing-description: "Now hiring developers!"
 ---
 
 <section>
-  <div class="sleeve">
-    <h1>{{ page.title }}</h1>
+	<div class="sleeve">
+		<h1>{{ page.title }}</h1>
 
-    <div class="slice">
-      <div class="slice-body">
-        <p>
-          We're looking for web developers!
-        </p>
-      </div>
-    </div>
+		<div class="slice">
+			<h2>Open positions</h2>
+			<div class="slice-body">
+				<p>
+					<a href="#web-developer">Web Developer</a><br>
+					<a href="#technologist-in-residence">Technologist in Residence</a>
+				</p>
+			</div>
+		</div>
 
-    <div class="slice">
-      <h2>About us</h2>
-      <div class="slice-body">
-        <p>
-	  The Library Innovation Lab is a team of librarians,
-	  programmers, artists, and lawyers with a broad mission: to
-	  build open source tools and services, open to everyone and
-	  in the public interest, solving serious emerging problems
-	  from the unique perspective of the world's largest academic
-	  law library. We are seeking web developers to join our team.
-        </p>
+		<div class="slice">
+			<h2>About us</h2>
+			<div class="slice-body">
+				<p>
+					The Library Innovation Lab is a team of librarians,
+					programmers, artists, and lawyers with a broad mission: to
+					build open source tools and services, open to everyone and
+					in the public interest, solving serious emerging problems
+					from the unique perspective of the world's largest academic
+					law library. On the tech side we work most often with Django,
+					Vue, and Postgres.
+				</p>
+			</div>
+		</div>
 
-        <p>
-	  Our tech team at full strength includes five developers and
-	  a devops engineer, working most often with Django, Vue, and
-	  Postgres.
-        </p>
-      </div>
-    </div>
+		<div class="slice">
+			<h2 id="web-developer">Web Developer</h2>
+			<div class="slice-body">
+				<p>
+					While we encourage anyone to apply, our Web Developer roles are a particularly
+					good fit for experienced developers who want to spend some
+					time working in the public interest in an academic setting,
+					with room to pursue their own priorities relating to our
+					mission.
+				</p>
 
-    <div class="slice">
-      <h2>About you</h2>
-      <div class="slice-body">
-        <p>
-	  While we encourage anyone to apply, this is a particularly
-	  good fit for experienced developers who want to spend some
-	  time working in the public interest in an academic setting,
-	  with room to pursue their own priorities relating to our
-	  mission.
-        </p>
-      </div>
-    </div>
+				<h3>What we offer</h3>
+				<ul>
+					<li>
+						Work on stuff that matters. Our core projects are about
+						opening access to law; redefining legal casebooks and
+						reducing their cost; and exploring cutting-edge web archival
+						techniques to keep important links working for the next 100
+						years.
+					</li>
+					<li>
+						Build open source. All of our projects are open source and
+						otherwise designed to maximize the public benefit of our
+						work.
+					</li>
+					<li>
+						Set your own pace. We are a small, self-directed group. Pick
+						the priorities where you see the highest impact at a pace
+						that feels comfortable. We have real vacations and no crunch
+						time.
+					</li>
+					<li>
+						Set your own research agenda. We are located at
+						the <a href="https://hls.harvard.edu/library/">Harvard Law
+						School Library</a> and share a kitchen with
+						the <a href="https://cyber.harvard.edu/">Berkman Klein
+						Center</a>
+						and <a href="https://metalabharvard.github.io/">metaLAB</a>. Going
+						to events, having conversations, developing your scholarly
+						perspective, and exploring it through code are
+						encouraged. We will specifically prioritize these things at
+						the cost of shipping the next feature.
+					</li>
+					<li>
+						Have job stability and support. While we maintain the creative
+						atmosphere and flexibility of a small innovation lab, we're
+						backed by an established institution with strong benefits and
+						support for employees.
+					</li>
+				</ul>
 
-    <div class="slice">
-      <h2>What we offer</h2>
-      <div class="slice-body">
-	<p>
-	  Work on stuff that matters. Our core projects are about
-	  opening access to law; redefining legal casebooks and
-	  reducing their cost; and exploring cutting-edge web archival
-	  techniques to keep important links working for the next 100
-	  years.
-	</p>
-	<p>
-	  Build open source. All of our projects are open source and
-	  otherwise designed to maximize the public benefit of our
-	  work.
-	</p>
-	<p>
-	  Set your own pace. We are a small, self-directed group. Pick
-	  the priorities where you see the highest impact at a pace
-	  that feels comfortable. We have real vacations and no crunch
-	  time.
-	</p>
-	<p>
-	  Set your own research agenda. We are located at
-	  the <a href="https://hls.harvard.edu/library/">Harvard Law
-	  School Library</a> and share a kitchen with
-	  the <a href="https://cyber.harvard.edu/">Berkman Klein
-	  Center</a>
-	  and <a href="https://metalabharvard.github.io/">metaLAB</a>. Going
-	  to events, having conversations, developing your scholarly
-	  perspective, and exploring it through code are
-	  encouraged. We will specifically prioritize these things at
-	  the cost of shipping the next feature.
-	</p>
-	<p>
-	  Have job stability and support. While we maintain the creative 
-	  atmosphere and flexibility of a small innovation lab, we're 
-	  backed by an established institution with strong benefits and 
-	  support for employees.
-	</p>
-      </div>
-    </div>
+				<h3>Location</h3>
+				<p>
+					We are based in a newly renovated space on the Harvard Law
+					School campus. While you can set your own schedule for home
+					and on-site days, the ideal candidate will benefit from
+					regular on-site collaboration with our team and the Harvard
+					community.
+				</p>
 
-    <div class="slice">
-      <h2>Location</h2>
-      <div class="slice-body">
-	<p>
-	  We are based in a newly renovated space on the Harvard Law
-	  School campus. While you can set your own schedule for home
-	  and on-site days, the ideal candidate will benefit from
-	  regular on-site collaboration with our team and the Harvard
-	  community.
-	</p>
-      </div>
-    </div>
+				<h3>Apply</h3>
+				<p>
+					<a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?PageType=JobDetails&partnerid=25240&siteid=5341&Areq=56168BR#jobDetails=1929281_5341">Web
+						Application Developer posting</a>
+				</p>
 
-    <div class="slice">
-      <h2>Apply</h2>
-      <div class="slice-body">
-	<p>
-	  <a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?PageType=JobDetails&partnerid=25240&siteid=5341&Areq=56168BR#jobDetails=1929281_5341">Web
-	  Application Developer posting</a>
-	</p>
-      </div>
-    </div>
+				<h3>Questions</h3>
+				<p>
+					Contact us at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.
+				</p>
+			</div>
+		</div>
 
-    <div class="slice">
-      <h2>Questions</h2>
-      <div class="slice-body">
-	<p>
-	  Contact us at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.
-	</p>
-      </div>
-    </div>
+		<div class="slice">
+			<h2 id="technologist-in-residence">Technologist in Residence</h2>
+			<div class="slice-body">
+				<p>
+					In addition to the web developer role posted above, the Library Innovation Lab is seeking a
+					technologist-in-residence to join our team on a one-year appointment.
+				</p>
+				<p>
+					This is a full-time, salaried term appointment intended for senior software engineers who are looking for a
+					year to take stock at Harvard before beginning the next phase of their careers. You will:
+				</p>
+				<ul>
+					<li>Join our developer team meetings.</li>
+					<li>Advise on architecture, strategy, and process.</li>
+					<li>Take on challenging software implementation tasks at the core of our projects.</li>
+					<li>Design your own research agenda, which may include exploring, coding, writing, and speaking related to the future of the internet, law, libraries, or education, based on your existing experience and interests.</li>
+				</ul>
+				<p>
+					In short, we offer an experienced software engineer a year for contemplation and exploration, housed at the
+					Harvard Law School Library, in exchange for helping us to enhance our software quality and public impact.
+				</p>
+				<p>
+					Applications will be considered on a rolling basis beginning February 28, 2022. Start date will be individually negotiated.
+				</p>
 
-    <div class="slice">
-      <h2>Diversity</h2>
-      <div class="slice-body">
-        <p>
-          The work and well-being of the Lab are strengthened profoundly by the
-          diversity of our network and our differences in background, culture,
-          experience, national origin, religion, sexual orientation, and much
-          more. We actively seek and welcome applications from people of color,
-          women, the LGBTQ+ community, and persons with disabilities, as well as
-          applications from researchers and practitioners from across the
-          spectrum of disciplines and methods.
-        </p>
-      </div>
-    </div>
-  </div>
+				<h3>Location</h3>
+				<p>
+					We are based in a newly renovated space on the Harvard Law
+					School campus. While you can set your own schedule for home
+					and on-site days, the ideal candidate will benefit from
+					regular on-site collaboration with our team and the Harvard
+					community.
+				</p>
+
+				<h3>Apply</h3>
+				<p>
+					<a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?partnerid=25240&siteid=5341&PageType=JobDetails&jobid=1943239">Technologist in Residence posting</a>
+				</p>
+
+				<h3>Questions</h3>
+				<p>
+					Contact us at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.
+				</p>
+			</div>
+		</div>
+
+		<div class="slice">
+			<h2 id="diversity-statement">Diversity statement</h2>
+			<div class="slice-body">
+				<p>
+					The work and well-being of the Lab are strengthened profoundly by the
+					diversity of our network and our differences in background, culture,
+					experience, national origin, religion, sexual orientation, and much
+					more. We actively seek and welcome applications from people of color,
+					women, the LGBTQ+ community, and persons with disabilities, as well as
+					applications from researchers and practitioners from across the
+					spectrum of disciplines and methods.
+				</p>
+			</div>
+		</div>
+	</div>
 </section>
