edited MetaLAB URL

--- a/app/collaborate/index.html
+++ b/app/collaborate/index.html
@@ -74,7 +74,7 @@ sharing-description: "Now hiring developers!"
 						School Library</a> and share a kitchen with
 						the <a href="https://cyber.harvard.edu/">Berkman Klein
 						Center</a>
-						and <a href="https://metalabharvard.github.io/">metaLAB</a>. Going
+						and <a href="https://mlml.io/">metaLAB</a>. Going
 						to events, having conversations, developing your scholarly
 						perspective, and exploring it through code are
 						encouraged. We will specifically prioritize these things at
