Hide an easter egg, to test CSS cache-busting.

--- a/app/index.html
+++ b/app/index.html
@@ -57,3 +57,5 @@ custom-scripts: ['jquery-3.1.1.min.js', 'home.js']
 
   </div>
 </section>
+
+<div class="easter-egg"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="sr-only sr-only-focusable"><span>You found</span> an item from our secret collection!</a></div>
