Move collaborate -> jobs

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -1,6 +1,6 @@
 ---
-title: Collaborate
-slug: collaborate
+title: Jobs
+slug: jobs
 layout: sectioned-page
 
 sharing-image: images/og_hiring_developers.png
