--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -173,7 +173,7 @@ sharing-description: "Now hiring developers!"
 
 				<p>To take a look at our code and get a sense of work, please visit <a href="https://github.com/harvard-lil">https://github.com/harvard-lil</a>. <strong>Applications are due Friday, April 15th and start dates will be scheduled for early June 2022</strong>.</p>
 
-				<p>Please apply here.</p>
+				<p><a href="https://harvard.az1.qualtrics.com/jfe/form/SV_4O8yUcYUmSDTNki">Please apply here</a>.</p>
 
 			</div>
 		</div>
