--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -165,7 +165,7 @@ sharing-description: "Now hiring developers!"
 
 				<p>We work at the intersection of libraries, technology, and the law, building and supporting projects that broaden access to information through open source software. This summer, we're seeking research assistants to participate broadly in the life and work of LIL, and to help our team advance our development goals in the fields of open access data and learning.</p>
 
-				<p>As a research assistant, you will have the opportunity to jump into legal academia via a technical lens, rooting yourself in a law library focused both on innovation and legal tradition. You will help us imagine and act on new ways to serve the growing community of faculty, librarians and students who are interested in our three tent-pole projects: <a href="https://opencasebook.org">H2O Open Casebook</a>, <a href="https://case.law">The Caselaw Access Project</a> and <a href="https://perma.cc">Perma.cc</a>.</p>
+				<p>As a research assistant, you will have the opportunity to jump into legal academia via a technical standpoint, rooting yourself in a law library focused both on innovation and legal tradition. You will help us imagine and act on new ways to serve the growing community of faculty, librarians and students who are interested in our three tent-pole projects: <a href="https://opencasebook.org">H2O Open Casebook</a>, <a href="https://case.law">The Caselaw Access Project</a> and <a href="https://perma.cc">Perma.cc</a>.</p>
 
 				<p>Our team will work with each research assistant to scope out a development roadmap that builds upon our current project goals and highlights the candidate's interests. We're looking for a collaborator, not an intern.</p>
 
