--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -147,7 +147,7 @@ sharing-description: "Now hiring developers!"
 
 				<h3>Apply</h3>
 				<p>
-					<a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?partnerid=25240&siteid=5341&PageType=JobDetails&jobid=1943239">Technologist in Residence posting</a>
+					Our Technologist in Residence role is a one-year salaried position, so applications are accepted through the Harvard employment site: <a href="https://sjobs.brassring.com/TGnewUI/Search/home/HomeWithPreLoad?partnerid=25240&siteid=5341&PageType=JobDetails&jobid=1943239">Technologist in Residence posting</a>. <strong>Please include a short cover letter explaining your interest and goals for the year.</strong>
 				</p>
 
 				<h3>Questions</h3>
