--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -162,6 +162,10 @@ sharing-description: "Now hiring developers!"
 			<div class="slice-body">
 
 				<p>
+					<b>Deadline extended:</b> we will be accepting applications for this role on a rolling basis through May 1, 2022. 
+					
+				</p>
+					
 					We're seeking incoming first-year law students with a background in technology or design to join the Library
 					Innovation Lab as summer research assistants. <b>Join us this summer to get a head start on adapting to law
 					school and hack on sites that expand access to the law.</b>
@@ -213,7 +217,7 @@ sharing-description: "Now hiring developers!"
 				<p>$20/hour</p>
 
 				<h3>Dates</h3>
-				<p>Applications are due Friday, April 15th. Start dates will be scheduled for early June 2022.</p>
+				<p>Applications are being reviewed on a rolling basis through May 1st. Start dates will be scheduled for early June 2022.</p>
 
 				<h3>Apply</h3>
 				<p><a href="https://harvard.az1.qualtrics.com/jfe/form/SV_4O8yUcYUmSDTNki">Please apply here</a>.</p>
