--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -30,7 +30,8 @@ layout: sectioned-page
 					Vue, and Postgres.
 				</p>
 			</div>
-
+		</div>
+		
 		<div class="slice">
 			<h2 id="summer-ra">Summer 2022 Research Assistants</h2>
 			<div class="slice-body">
